aoe-web-frontend/src/app/views/search-results-view/search-results-view.component.scss
@use 'mixins';
@use 'variables';

.block-header {
  background-color: variables.$light;
  box-shadow:
    rgba(9, 30, 66, 0.25) 0 4px 8px -2px,
    rgba(9, 30, 66, 0.04) 0px 0px 0px 1px;
  // border-radius: 0.25rem;
  margin-bottom: 1rem;
  padding: 1.5rem 1rem;
}

#filters {
  h2 {
    color: variables.$dark;
    margin-bottom: 0;
    @include mixins.resize(18px);
  }

  .badge {
    font-weight: 400;
    @include mixins.resize(12px);
  }
}

.filter {
  border-bottom: 1px solid #ccc;
  padding: 1rem 1rem;

  .header {
    h3 {
      font-weight: 300;
      margin-bottom: 0;
      @include mixins.resize(13px);
    }
  }

  .content {
    padding-left: 1rem;
    padding-top: 0.5rem;

    .form-check-label {
      padding-top: 0.125rem;
      @include mixins.resize(12px);
    }

    h5 {
      @include mixins.resize(14px);
    }

    .children {
      margin-bottom: 0.5rem;
    }
  }
}

.results-count {
  font-weight: 500;
  @include mixins.resize(14px);
}

.search-pagination::ng-deep .ngx-pagination {
  margin-bottom: 0;
  @include mixins.resize(14px);

  .current {
    background-color: variables.$blue;
  }
}

.search-filter {
  font-weight: 500;
  margin-right: 0.25rem;
  @include mixins.resize(14px);

  button {
    border-radius: 0.125rem;
    line-height: 1;
    padding: 0.05rem 0.2rem;
    vertical-align: baseline;
    @include mixins.resize(12px);
  }
}

#search-filters {
  background-color: variables.$light;
  box-shadow:
    rgba(9, 30, 66, 0.25) 0 4px 8px -2px,
    rgba(9, 30, 66, 0.04) 0px 0px 0px 1px;
}

#button-narrow-search {
  box-shadow:
    rgba(9, 30, 66, 0.25) 0 4px 8px -2px,
    rgba(9, 30, 66, 0.04) 0px 0px 0px 1px;
}

